apps/green/nodejs-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/evanshortiss/summit-connect-hackathon-2022
  labels:
    app: nodejs-metrics-example
    app.kubernetes.io/component: nodejs-metrics-example
    app.kubernetes.io/instance: nodejs-metrics-example
    app.kubernetes.io/name: nodejs-metrics-example
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
  name: nodejs-metrics-example
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nodejs-metrics-example
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-metrics-example
        deploymentconfig: nodejs-metrics-example
    spec:
      containers:
      - image: quay.io/evanshortiss/summit-connect-2022-metrics-app:1.0.0
        imagePullPolicy: Always
        name: nodejs-metrics-example
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
