apps/green/nodejs-app/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nodejs-metrics-example
    app.kubernetes.io/component: nodejs-metrics-example
    app.kubernetes.io/instance: nodejs-metrics-example
    app.kubernetes.io/name: nodejs-metrics-example
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
  name: nodejs-metrics-example
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nodejs-metrics-example
    weight: 100
  wildcardPolicy: None
